Fix items alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -72,9 +72,10 @@ a {
   padding: 0;
   list-style-type: none;
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 
   li {
-    display: inline-block;
     margin-right: $gutter;
     margin-bottom: $gutter;
     width: 23%;
